[package]
name = "anchor-lldb"
version = "0.1.0"
edition = "2024"

description = "A CLI tool to generate a standalone Rust crate to simulate and debug program instructions writte on Anchor Solana framework. Creates a binary executable that can be debugged with lldb."
license-file = "LICENSE"

authors = ["Emil Roydev"]
readme = "README.md"
repository = "https://github.com/ERoydev/anchor-lldb"
keywords = ["solana", "anchor", "lldb", "debugging", "cli"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anchor-idl = "0.4.1"
clap = { version = "4.5.40", features = ["derive"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
toml_edit = "0.22.27"
syn = { version = "2.0.104", features = ["parsing", "full"] }
walkdir = "2.5.0"


[[bin]]
name = "anchor-lldb"
path = "src/main.rs"
